test_case/rust-lang_rust/38190_265227048.rs
rust
macro_rules! m { ($i:item) => { mod x { $i } } }

m! { mod y; } // error: no file y.rs or y/mod.rs
